Fixed popular card div width on mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1183,16 +1183,14 @@ footer ul {
   }
 
   .popular_card figure div {
-    width: 40%;
-
     margin-right: 15px;
   }
 
   .popular_card figure div img {
-    width: 110px;
-    min-width: 110px;
-    height: 150px;
+    width: 130px;
+    min-width: 130px;
 
+    height: 150px;
     max-height: 100%;
 
     object-fit: cover;
